# BusRaider

./: .gitignore  .gitmodules  LICENSE  README.md  conftest.py  devconfig.ini  index.html  index.md  kernel.img  pytest.ini  requirements-dev.txt  t1.py
EspSw2/: .gitignore  CMakeLists.txt  Makefile  README.md  ValidateJSON.py  build-flash-monitor.sh  devconfig.ini  sdkconfig.defaults
EspSw2/buildConfigs/BusRaider/: SysTypes.json  featureFlags.cmake  partitions.csv  sdkconfig.defaults
EspSw2/components/RdMQTT/: CMakeLists.txt  LICENSE  README.md  library.json
EspSw2/components/RdWebServer/: CMakeLists.txt  library.json
EspSw2/components/comms/: CMakeLists.txt
EspSw2/components/core/: CMakeLists.txt
EspSw2/components/system/: CMakeLists.txt  component.mk
EspSw2/main/: CMakeLists.txt  Kconfig.projbuild  RICSysTypes.cpp  RICSysTypes.h  SysTypeStatics.cpp  SysTypeStatics.h  main.cpp
EspSw2/main/PiCoProcessor/: PiCoProcessor.cpp  PiCoProcessor.h
EspSw2/main/TCPConnection/: TCPConnManager.cpp  TCPConnManager.h  TCPConnSettings.h  TCPConnection.cpp  TCPConnection.h
EspSw2/scripts/: KeyboardUtils.py  SerialMonitor.py  SerialMonitor_curses.py  UITemplater.py  build-flash-monitor.sh  build.py  flashUsingPartitionCSV.py  json2header.py  littlefs_create_partition_image.cmake  rebuild-ui.sh  requirements.txt
EspSw2/spiffs_image/: RCZ80_std.rom  index.html
EspSw2/unit_tests/: CMakeLists.txt  Makefile  build-flash-monitor.sh  partitions.csv  sdkconfig.defaults
EspSw2/unit_tests/main/: CMakeLists.txt  test_main.cpp
EspSw2/webUI/: index.html
PiSw/: .gitignore  BuildCircle.cmd  BuildCircle.sh  BusRaider.lst  CMakeLists.txt  CMakeLists.txt.incomplete  Makefile  README.md  bash.exe.stackdump  build.bat  build.sh  busraider.ld  kernel.elf  kernel.img  kernel.lst  kernel.map  memmap  pi_bus_raider.elf  pi_bus_raider.hex  pi_bus_raider.img  pi_bus_raider.list  pi_bus_raider.srec  pigfx.elf  pigfx.hex  pigfx.img  pigfx.srec  tags  toolchain.cmake
PiSw/JTAG/: gdb_commands.txt
PiSw/cmake/: toolchain.cmake
PiSw/examples/demo/: demo.json
PiSw/examples/hardwareDebug/: SimpleHDLC.py  chess3DDump.txt  hwDebugEgAddrWrite.py  hwDebugRRPageToggle.py  hwDebugRRRegSet.py  hwDebugTraceAll.py  logSerial.py
PiSw/examples/logs/: TraceLong_512KRAMROM_original.txt  TraceLong_512KRAMROM_w_paging.txt
PiSw/fonts/: GenFont.py  GenFontTRS80Level3.py  README
PiSw/src/: BusRaiderApp.cpp  BusRaiderApp.h  BusRaiderApp_TestBusBits.cpp  BusRaiderApp_TestBusDetail.cpp  BusRaiderApp_TestCommon.cpp  BusRaiderApp_TestMemory.cpp  McBase.cpp  McBase.h  McDebugZ80.cpp  McDebugZ80.h  McFormatBase.h  McManager.cpp  McManager.h  McRobsZ80.cpp  McRobsZ80.h  McTRS80.cpp  McTRS80.h  McTRS80CmdFormat.cpp  McTRS80CmdFormat.h  McTerminal.cpp  McTerminal.h  McZXSpectrum.cpp  McZXSpectrum.h  McZXSpectrumTZXFormat.cpp  McZXSpectrumTZXFormat.h  TargetClockGenerator.h  asm.s  bare_metal_pi_zero.h  bus_access.c  bus_access.h  busraider.c  busraider.h  cmd_handler.c  cmd_handler.cpp  cmd_handler.h  dma.c  dma.h  ee_printf.c  ee_printf.h  framebuffer.c  (+62 more)
PiSw/src/BusController/: BusController.cpp  BusController.h
PiSw/src/BusRaiderAPI/: BusRaiderAPI.cpp  BusRaiderAPI.h
PiSw/src/CommandInterface/: CommandHandler.cpp  CommandHandler.h  MiniHDLC.cpp  cmd_handler.cpp  cmd_handler.h  minihdlc.c  minihdlc.h
PiSw/src/DeZogInterface/: DeZogInterface.cpp  DeZogInterface.h
PiSw/src/Debugger/: StepTester.cpp  StepTester.h  TargetDebug.cpp  TargetDebug.h
PiSw/src/Disassembler/: .gitignore  readme.md  readme.txt
PiSw/src/FileFormats/: McFormatBase.h  McTRS80CmdFormat.cpp  McTRS80CmdFormat.h  McZXSpectrumSNAFormat.cpp  McZXSpectrumSNAFormat.h  McZXSpectrumTZXFormat.cpp  McZXSpectrumTZXFormat.h  McZXSpectrumZ80Format.cpp  McZXSpectrumZ80Format.h  srecparser.c  srecparser.cpp
PiSw/src/Fonts/: ZXSpectrumFont.c  font12x16.c  mc_trs80l1font.c  mc_trs80l3font.c
PiSw/src/Hardware/: Hw1MBRamRom.cpp  Hw1MBRamRom.h  Hw512KRamRom.cpp  Hw512KRamRom.h  Hw64KPagedRAM.cpp  Hw64KPagedRAM.h  Hw64KRAM.cpp  Hw64KRAM.h  HwBase.cpp  HwBase.h  HwManager.cpp  HwManager.h  HwRAMROM.cpp  HwRAMROM.h
PiSw/src/Machines/: McBase.cpp  McBase.h  McDebugZ80.cpp  McDebugZ80.h  McManager.cpp  McManager.h  McRobsZ80.cpp  McRobsZ80.h  McTRS80.cpp  McTRS80.h  McTerminal.cpp  McTerminal.h  McZXSpectrum.cpp  McZXSpectrum.h  McZXSpectrumDebug.cpp  McZXSpectrumDebug.h
PiSw/src/RemoteDebug/: RemoteDebugHandler.h
PiSw/src/StepTracer/: StepTracer.cpp  StepTracer.h
PiSw/src/StepValidator/: StepValidator.cpp  StepValidator.h
PiSw/src/System/: BCM2835.h  CInterrupts.cpp  CInterrupts.h  Display.cpp  Display.h  DisplayBase.h  DisplayFX.cpp  DisplayFX.h  KeyConversion.cpp  KeyConversion.h  OTAUpdate.cpp  OTAUpdate.h  PiWiring.cpp  RdStdCpp.cpp  RdStdCpp.h  RingBufferPosn.h  Timers.cpp  Timers.h  UartMaxi.cpp  UartMaxi.h  UartMini.c  UartMini.cpp  UartMini.h  Utils.cpp  Utils.h  bare_metal_pi_zero.h  bcmmailbox.cpp  bcmmailbox.h  bcmpropertytags.cpp  bcmpropertytags.h  dma.c  dma.h  ee_printf.c  ee_printf.h  ee_sprintf.c  ee_sprintf.h  framebuffer.c  framebuffer.h  irq.c  irq.h  (+27 more)
PiSw/src/TargetBus/: BusAccess.c  BusAccess.cpp  BusAccess.h  BusAccessDefs.h  BusAccess_Control.cpp  MemorySystem.cpp  MemorySystem.h  RAMEmulator.cpp  RAMEmulator.h  StepTester.cpp  StepTester.h  TargetBreakpoints.cpp  TargetCPU.h  TargetCPUZ80.cpp  TargetCPUZ80.h  TargetClockGenerator.h  TargetDebug.cpp  TargetDebug.h  TargetProgrammer.cpp  TargetRegisters.h  TargetState.cpp  TargetState.h  TargetTracker.cpp  TargetTracker.h  busraider.c  busraider.h  piwiring.c  piwiring.h  target_memory_map.c  target_memory_map.h
PiSw/src/TerminalEmulation/: TermAnsi.cpp  TermAnsi.h  TermEmu.cpp  TermEmu.h  TermH19.cpp  TermH19.h  (+1 more)
PiSw/test/: CommonTestCode.py  ParseHDLCDump.py  SendAndTest.py  SendTRS80GalaxyInvasionAndRun.py  SendTRS80Level1ROMAndRun.py  SendTestProgramAndRun.py  SimpleHDLC.py  SimpleTCP.py  TestCmdsOverHDLC.py  TestHDLCSendFrame.py  TestReceiveHDLC.py  TestRxChars.py  TestSendTRS80L1RomAndReset.py  test_UnitTests.py
PiSw/tools/: ParseHDLCDump.py  UploadToBusRaider.py
(+885 files in other folders)
