idf_component_register(
                SRCS 
                  "RestAPIEndpoints/RestAPIEndpointManager.cpp"
                  "ProtocolEndpoints/ProtocolEndpointManager.cpp"
                  "ProtocolEndpointMsg/ProtocolEndpointMsg.cpp"
                  "ProtocolRawMsg/ProtocolRawMsg.cpp"
                  "ProtocolBase/ProtocolBase.cpp"
                  "RdWebServer/RdWebServer.cpp"
                  "RdWebServer/RdWebConnManager.cpp"
                  "RdWebServer/RdWebConnDefs.cpp"
                  "RdWebServer/RdWebHandlerStaticFiles.cpp"
                  "RdWebServer/RdWebConnection.cpp"
                  "RdWebServer/RdWebResponderFile.cpp"
                  "RdWebServer/RdWebResponderRestAPI.cpp"
                  "RdWebServer/RdWebResponderWS.cpp"
                  "RdWebServer/RdWebSocketLink.cpp"
                  "RdWebServer/RdWebMultipart.cpp"
                  "ROSSerial/ROSSerialMsg.cpp"
                  "ROSSerial/ROSTopicManager.cpp"
                  "ROSSerial/ROSSerialHandler.cpp"
                  "RICRESTMsg/RICRESTMsg.cpp"
                  "ProtocolRICSerial/ProtocolRICSerial.cpp"
                  "ProtocolRICFrame/ProtocolRICFrame.cpp"
                  "ProtocolMarty1SC/ProtocolMarty1SC.cpp"
                  "ProtocolMarty1SC/ProtocolMarty1SCDecoder.cpp"
                  "ProtocolOverAscii/ProtocolOverAscii.cpp"
                INCLUDE_DIRS
                  "RestAPIEndpoints"
                  "ProtocolEndpoints"
                  "ProtocolEndpointMsg"
                  "ProtocolRawMsg"
                  "ProtocolBase"
                  "RdWebServer"
                  "ROSSerial"
                  "RICRESTMsg"
                  "ProtocolRICSerial"
                  "ProtocolRICFrame"
                  "ProtocolMarty1SC"
                  "ProtocolOverAscii"
                REQUIRES
                  core
                  system
                )

