idf_component_register(
                SRCS 
                  "RestAPIEndpoints/RestAPIEndpointManager.cpp"
                  "ProtocolEndpoints/ProtocolEndpointManager.cpp"
                  "ProtocolEndpointMsg/ProtocolEndpointMsg.cpp"
                  "ProtocolRawMsg/ProtocolRawMsg.cpp"
                  "ProtocolBase/ProtocolBase.cpp"
                  "ROSSerial/ROSSerialMsg.cpp"
                  "ROSSerial/ROSSerialHandler.cpp"
                  "RICRESTMsg/RICRESTMsg.cpp"
                  "ProtocolRICSerial/ProtocolRICSerial.cpp"
                  "ProtocolRICFrame/ProtocolRICFrame.cpp"
                  "ProtocolOverAscii/ProtocolOverAscii.cpp"
                INCLUDE_DIRS
                  "RestAPIEndpoints"
                  "ProtocolEndpoints"
                  "ProtocolEndpointMsg"
                  "ProtocolRawMsg"
                  "ProtocolBase"
                  "ROSSerial"
                  "RICRESTMsg"
                  "ProtocolRICSerial"
                  "ProtocolRICFrame"
                  "ProtocolOverAscii"
                REQUIRES
                  core
                  system
                  comms
                )

