idf_component_register(
                SRCS 
                  "RestAPIEndpoints/RestAPIEndpointManager.cpp"
                  "ProtocolEndpoints/ProtocolEndpointManager.cpp"
                  "ProtocolEndpoints/ProtocolEndpointDef.cpp"
                  "ProtocolEndpointMsg/ProtocolEndpointMsg.cpp"
                  "ProtocolRawMsg/ProtocolRawMsg.cpp"
                  "ProtocolBase/ProtocolBase.cpp"
                  "ROSSerial/ROSSerialMsg.cpp"
                  "ROSSerial/ROSSerialHandler.cpp"
                  "RICRESTMsg/RICRESTMsg.cpp"
                  "ProtocolRICSerial/ProtocolRICSerial.cpp"
                  "ProtocolRICFrame/ProtocolRICFrame.cpp"
                  "ProtocolRICJSON/ProtocolRICJSON.cpp"
                  "ProtocolOverAscii/ProtocolOverAscii.cpp"
                  "ProtocolFileStream/ProtocolFileStream.cpp"
                  "ProtocolExchange/ProtocolExchange.cpp"
                  "ProtocolExchange/FileStreamSession.cpp"
                INCLUDE_DIRS
                  "RestAPIEndpoints"
                  "ProtocolEndpoints"
                  "ProtocolEndpointMsg"
                  "ProtocolRawMsg"
                  "ProtocolBase"
                  "ROSSerial"
                  "RICRESTMsg"
                  "ProtocolRICSerial"
                  "ProtocolRICFrame"
                  "ProtocolRICJSON"
                  "ProtocolOverAscii"
                  "ProtocolFileStream"
                  "ProtocolExchange"
                REQUIRES
                  core
                  system
                  comms
                )

