idf_component_register(
                SRCS 
                  "ConfigPinMap/ConfigPinMap.cpp"
                  "Utils/Utils.cpp"
                  "Utils/WString.cpp"
                  "Utils/ESPUtils.cpp"
                  "Utils/stdlib_noniso.c"
                  "MiniHDLC/MiniHDLC.cpp"
                  "Logger/Logger.cpp"
                  "RdJson/RdJson.cpp"
                  "RdJson/jsmnR.cpp"
                  "Config/ConfigNVS.cpp"
                  "Config/ConfigBase.cpp"
                  "RdPreferences/RdPreferences.cpp"
                  "FileSystem/FileSystem.cpp"
                  "FileSystem/FileSystemChunker.cpp"
                  "NetworkSystem/NetworkSystem.cpp"
                  "libb64/cencode.cpp"
                  "ExpressionEval/ExpressionEval.cpp"
                  "ExpressionEval/ExpressionContext.cpp"
                  "ExpressionEval/tinyexpr.c"
                  "DebounceButton/DebounceButton.cpp"
                  "ArduinoUtils/ArduinoTime.cpp"
                  "ArduinoUtils/ArduinoGPIO.cpp"
                  "RdI2C/RdI2C.cpp"
                  "SupervisorStats/SupervisorStats.cpp"
                INCLUDE_DIRS
                  "Logger"
                  "ConfigPinMap"
                  "Config"
                  "ThreadSafeQueue"
                  "Utils"
                  "RdJson"
                  "RdPreferences"
                  "MiniHDLC"
                  "FileSystem"
                  "NetworkSystem"
                  "libb64"
                  "ExpressionEval"
                  "DebounceButton"
                  "ArduinoUtils"
                  "RdI2C"
                  "SupervisorStats"
                REQUIRES
                  nvs_flash
                  spiffs
                  fatfs
                  mdns
                )
                