idf_component_register(
                SRCS 
                  "ConfigPinMap/ConfigPinMap.cpp"
                  "Utils/Utils.cpp"
                  "Utils/WString.cpp"
                  "Utils/ESPUtils.cpp"
                  "Utils/stdlib_noniso.c"
                  "MiniHDLC/MiniHDLC.cpp"
                  "Logger/Logger.cpp"
                  "Logger/LoggerCore.cpp"
                  "Logger/LoggerPapertrail.cpp"
                  "RdJson/RdJson.cpp"
                  "RdJson/jsmnR.cpp"
                  "Config/ConfigNVS.cpp"
                  "Config/ConfigBase.cpp"
                  "Config/ConfigMulti.cpp"
                  "ArPreferences/ArPreferences.cpp"
                  "FileSystem/FileSystem.cpp"
                  "FileSystem/FileSystemChunker.cpp"
                  "NetworkSystem/NetworkSystem.cpp"
                  "libb64/cencode.cpp"
                  "ExpressionEval/ExpressionEval.cpp"
                  "ExpressionEval/ExpressionContext.cpp"
                  "ExpressionEval/tinyexpr.c"
                  "DebounceButton/DebounceButton.cpp"
                  "ArduinoUtils/ArduinoTime.cpp"
                  "ArduinoUtils/ArduinoGPIO.cpp"
                  "SupervisorStats/SupervisorStats.cpp"
                  "DebugGlobals/DebugGlobals.cpp"
                  "HWUtils/HWUtils.cpp"
                INCLUDE_DIRS
                  "Logger"
                  "ConfigPinMap"
                  "Config"
                  "ThreadSafeQueue"
                  "RingBuffer"
                  "Utils"
                  "RdJson"
                  "ArPreferences"
                  "MiniHDLC"
                  "FileSystem"
                  "NetworkSystem"
                  "libb64"
                  "ExpressionEval"
                  "DebounceButton"
                  "ArduinoUtils"
                  "SupervisorStats"
                  "APICommon"
                  "DebugGlobals"
                  "HWUtils"
                  "NumericalFilters"
                  "MovingAverage"
                REQUIRES
                  nvs_flash
                  spiffs
                  fatfs
                  mdns
                  esp_littlefs-src
                )
                