idf_component_register(
                SRCS 
                  "SysMod/SysModBase.cpp"
                  "SysManager/SysManager.cpp"
                  "SysManager/FileUploadHandler.cpp"
                  "SysTypes/SysTypeManager.cpp"
                  "BLEManager/BLEManager.cpp"
                  "BLEManager/BLEGattServer.cpp"
                  "NetworkManager/NetworkManager.cpp"
                  "SerialConsole/SerialConsole.cpp"
                  "FileManager/FileManager.cpp"
                  "WebServer/WebServer.cpp"
                  "NetDiscovery/NetDiscovery.cpp"
                  "CommandSocket/CommandSocket.cpp"
                  "CommandSerial/CommandSerial.cpp"
                  "CommandFile/CommandFile.cpp"
                  "ESPOTAUpdate/ESPOTAUpdate.cpp"
                INCLUDE_DIRS
                  "SysMod"
                  "SysManager"
                  "SysTypes"
                  "BLEManager"
                  "NetworkManager"
                  "SerialConsole"
                  "FileManager"
                  "WebServer"
                  "NetDiscovery"
                  "CommandSocket"
                  "CommandSerial"
                  "CommandFile"
                  "ESPOTAUpdate"
                REQUIRES 
                  core
                  comms
                  RdWebServer
                  bt
                  spiffs
                  fatfs
                  app_update
                  )
