idf_component_register(
                SRCS 
                  "SysMod/SysModBase.cpp"
                  "SysManager/SysManager.cpp"
                  "SysTypes/SysTypeManager.cpp"
                  "BLEManager/BLEManager.cpp"
                  "BLEManager/BLEGattServer.cpp"
                  "NetworkManager/NetworkManager.cpp"
                  "SerialConsole/SerialConsole.cpp"
                  "FileManager/FileManager.cpp"
                  "WebServer/WebServer.cpp"
                  "NetDiscovery/NetDiscovery.cpp"
                  "CommandSocket/CommandSocket.cpp"
                  "CommandSerial/CommandSerial.cpp"
                  "CommandFile/CommandFile.cpp"
                  "ESPOTAUpdate/ESPOTAUpdate.cpp"
                  "StreamManager/StreamManager.cpp"
                  "MQTTManager/MQTTManager.cpp"
                  "StatePublisher/StatePublisher.cpp"
                INCLUDE_DIRS
                  "SysMod"
                  "SysManager"
                  "SysTypes"
                  "BLEManager"
                  "NetworkManager"
                  "SerialConsole"
                  "FileManager"
                  "StreamManager"
                  "WebServer"
                  "NetDiscovery"
                  "CommandSocket"
                  "CommandSerial"
                  "CommandFile"
                  "ESPOTAUpdate"
                  "MQTTManager"
                  "StatePublisher"
                REQUIRES 
                  core
                  comms
                  rd_webserver-src
                  RdMQTT
                  bt
                  spiffs
                  fatfs
                  app_update
                )
